# kuroome-blog

./: .env.example  .gitignore  01_Architecture_Overview.md  02_Database_Models.md  03_Core_Modules.md  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  IMPORT_CIRCULAR_FIX.md  LICENSE.txt  PRODUCT.md  README.md  blog.code-workspace  books-audit-report.md  changelog.json  deploy.sh.example  docker-compose.infra.yml  docker-compose.yml  go.work  go.work.sum  html5-cheatsheet.html  manage_services.sh  package-lock.json  package.json  pnpm-lock.yaml  后端架构检查报告.md
backend/: .env.example  .gitignore  TASKIQ.md  alembic.ini  changelog_data.json  deplot.sh  deploy.sh  gen_token.py  gunicorn_conf.py  pyproject.toml  ruff.toml  test_task.py  服务解耦操作指南.md
backend/alembic/: env.py
backend/alembic/versions/: 0103f6049668_drop_legacy_book_and_user_book_tables.py  03fd9cf7f6f0_.py  056d80d30f9d_添加rssinfo.py  23d669e5197c_add_subscription.py  258a91d2d1f9_modify_sub.py  29a89d120d61_add_github_id_field_to_user_model.py  30946bcb296f_.py  37e0ae95456b_add_track_detailed_info.py  3d6a7520206b_add_log_table.py  4d42db830046_添加track.py  5cb9cd4a3963_change_browser_field_to_text.py  62dbce97e75d_create_device_track_table.py  6a8b2c4d_add_event_table.py  6c860eab086c_optimize_tables_add_composite_indexes_.py  8f3c1a4b9d2e_add_rss_meta_columns.py  964a1ce1ebe8_init_migration.py  ca029d615c54_add_passkey.py  ca48f9c23d4c_add_track_union_index.py  cbfc541baf4d_add_exif_column_to_gallery_image.py  eb6894753b21_change_some_field_limit.py  f816f32028f6_add_galleryimage_model.py
backend/app/: AGENTS.md  __init__.py  appstate.py  main.py  middleware.py  router.py
backend/app/configs/: __init__.py  config.py  logger.py
backend/app/core/: __init__.py  agent.py  config.py  container.py  exceptions.py  llm_factory.py  logger.py  logging_context.py  mail.py  response.py  security.py  startup.py  weather_analyzer.py
backend/app/dependencies/: aps.py  auth.py  csrf.py  database.py  limiter.py  mail.py  mongo.py  (+1 more)
backend/legacy/: README.md  auth.py  base.html  forms.py  lorem.py  main.py  views.py  wsgi.py
backend/models/: fishing_residual_model.joblib  fishing_scaler.joblib
backend/scripts/: create_test_user.py  drop_message_board.py  fishing_spot.py  insert_changelog.py  migrate_changelog_to_mongo.py  migrate_weread_books_id.py
backend/test/: conftest.py  test_auth_api.py  test_base64url.py  test_base_service.py  test_blog_tags.py  test_cache.py  test_device_api.py  test_device_repo.py  test_device_service.py  test_event.py  test_exceptions.py  test_feishu.py  test_fishing_expert.py  test_gallery_repo.py  test_log_repo.py  test_logger.py  test_monitor_api.py  test_monitor_repo.py  test_monitor_service.py  test_notification.py  test_notification_plugin.py  test_password_hash.py  test_public_api.py  test_qwJWT.py  test_qweather_jwt.py  test_response.py  test_security.py  test_sse.py  test_sub_api.py  test_sub_repo.py  test_sub_service.py  test_system_api.py  test_system_service.py  test_task.py  test_token_rotation.py
(+2247 files in other folders)
